@@ -14,12 +14,12 @@ libbml_la_SOURCES = bml.c
 libbml_HEADERS = bml.h ./BuzzMachineLoader/BuzzMachineLoader.h
 
 if USE_DLLWRAPPER1
-libbml_la_LIBADD =$(BASE_DEPS_LIBS) \
+libbml_la_LIBADD =$(BML_LIBS) \
 	$(top_builddir)/dllwrapper1/wine/libloader.la
 endif
 
 if USE_DLLWRAPPER2
-libbml_la_LIBADD = $(BASE_DEPS_LIBS) \
+libbml_la_LIBADD = $(BML_LIBS) \
 	$(top_builddir)/dllwrapper2/libloader.la
 endif
 
@@ -29,12 +29,12 @@ libbml_la_LDFLAGS = -lm -lpthread -ldl
 bin_PROGRAMS=bmltest_info bmltest_process
 
 bmltest_info_SOURCES= bmltest_info.c
-bmltest_info_LDADD = $(BASE_DEPS_LIBS) -ldl \
+bmltest_info_LDADD = $(BML_LIBS) -ldl \
 	$(top_builddir)/src/libbml.la
 bmltest_info_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 bmltest_process_SOURCES= bmltest_process.c
-bmltest_process_LDADD = $(BASE_DEPS_LIBS) -ldl \
+bmltest_process_LDADD = $(BML_LIBS) -ldl \
 	$(top_builddir)/src/libbml.la
 bmltest_process_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
